force-app/main/default/objects/FIN_Applied_Accumulators__c/FIN_Applied_Accumulators__c.object-meta.xml
<CustomObject>
    <label>Applied Accumulators</label>
    <nameField>
        <displayFormat>AppAcc - {0000}</displayFormat>
        <label>Applied Accumulators Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applied Accumulators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>