force-app/main/default/objects/FIN_Applied_Accumulators__c/fields/FIN_AccumulationtoTargetCS__c.field-meta.xml
<CustomField>
    <fullName>FIN_AccumulationtoTargetCS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accum to Target Consumption Schedule</label>
    <referenceTo>ConsumptionSchedule</referenceTo>
    <relationshipLabel>Applied Accumulators (Accum to Target Consumption Schedule)</relationshipLabel>
    <relationshipName>Applied_Accumulators1</relationshipName>
    <type>Lookup</type>
</CustomField>