force-app/main/default/objects/FIN_Applied_Accumulators__c/fields/FIN_AdvancedRecoupmentCS__c.field-meta.xml
<CustomField>
    <fullName>FIN_AdvancedRecoupmentCS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advanced Recoupment Consumption Schedule</label>
    <referenceTo>ConsumptionSchedule</referenceTo>
    <relationshipLabel>Applied Accumulators (Advanced Recoupment Consumption Schedule)</relationshipLabel>
    <relationshipName>Applied_Accumulators2</relationshipName>
    <type>Lookup</type>
</CustomField>