force-app/main/default/objects/FIN_Applied_Accumulators__c/fields/FIN_Applied__c.field-meta.xml
<CustomField>
    <fullName>FIN_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applied</label>
    <type>Checkbox</type>
</CustomField>