force-app/main/default/objects/FIN_Applied_Accumulators__c/fields/FIN_Applied_Tier__c.field-meta.xml
<CustomField>
    <fullName>FIN_Applied_Tier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applied Tier</label>
    <referenceTo>ConsumptionRate</referenceTo>
    <relationshipLabel>Applied Accumulators</relationshipLabel>
    <relationshipName>Applied_Accumulators</relationshipName>
    <type>Lookup</type>
</CustomField>