force-app/main/default/objects/FIN_Applied_Accumulators__c/fields/FIN_Calculated_Ticket_Count__c.field-meta.xml
<CustomField>
    <fullName>FIN_Calculated_Ticket_Count__c</fullName>
    <label>Calculated Ticket Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>