force-app/main/default/objects/FIN_Applied_Accumulators__c/fields/FIN_CalculatedActualRevenue__c.field-meta.xml
<CustomField>
    <fullName>FIN_CalculatedActualRevenue__c</fullName>
    <label>Calculated Actual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>