force-app/main/default/objects/FIN_Applied_Accumulators__c/fields/FIN_CalculatedActualTicketCount__c.field-meta.xml
<CustomField>
    <fullName>FIN_CalculatedActualTicketCount__c</fullName>
    <description>calculated for counting tickets from this invoice shedule</description>
    <label>Calculated Actual Ticket Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>