force-app/main/default/objects/FIN_Applied_Accumulators__c/fields/FIN_Consumption_Schedule__c.field-meta.xml
<CustomField>
    <fullName>FIN_Consumption_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consumption Schedule</label>
    <referenceTo>ConsumptionSchedule</referenceTo>
    <relationshipLabel>Applied Accumulators</relationshipLabel>
    <relationshipName>Applied_Accumulators</relationshipName>
    <type>Lookup</type>
</CustomField>