force-app/main/default/objects/FIN_Applied_Accumulators__c/fields/FIN_ConsumptionScheduleRecordType__c.field-meta.xml
<CustomField>
    <fullName>FIN_ConsumptionScheduleRecordType__c</fullName>
    <formula>FIN_Consumption_Schedule__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consumption Schedule Record Type</label>
    <type>Text</type>
</CustomField>