force-app/main/default/objects/FIN_Applied_Accumulators__c/fields/FIN_CreditAmount__c.field-meta.xml
<CustomField>
    <fullName>FIN_CreditAmount__c</fullName>
    <label>Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>