force-app/main/default/objects/FIN_Applied_Accumulators__c/fields/FIN_Invoice_Item__c.field-meta.xml
<CustomField>
    <fullName>FIN_Invoice_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Item</label>
    <referenceTo>FIN_InvoiceItem__c</referenceTo>
    <relationshipLabel>Applied Accumulators</relationshipLabel>
    <relationshipName>Applied_Accumulators</relationshipName>
    <type>Lookup</type>
</CustomField>