force-app/main/default/objects/FIN_Applied_Accumulators__c/fields/FIN_Invoice_Schedule__c.field-meta.xml
<CustomField>
    <fullName>FIN_Invoice_Schedule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Invoice Schedule</label>
    <referenceTo>FIN_InvoiceSchedule__c</referenceTo>
    <relationshipLabel>Applied Accumulators</relationshipLabel>
    <relationshipName>Applied_Accumulators</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>