force-app/main/default/objects/FIN_Applied_Accumulators__c/fields/FIN_PricingMethod__c.field-meta.xml
<CustomField>
    <fullName>FIN_PricingMethod__c</fullName>
    <formula>TEXT(FIN_Applied_Tier__r.FIN_Pricing_Method__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricing Method</label>
    <type>Text</type>
</CustomField>