force-app/main/default/objects/FIN_Applied_Accumulators__c/fields/FIN_Rate__c.field-meta.xml
<CustomField>
    <fullName>FIN_Rate__c</fullName>
    <formula>FIN_Applied_Tier__r.FIN_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>