force-app/main/default/objects/FIN_Applied_Accumulators__c/fields/FIN_UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>FIN_UnitPrice__c</fullName>
    <formula>FIN_Applied_Tier__r.FIN_Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>